--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -270,6 +270,11 @@ dependencies {
     compile "com.google.firebase:firebase-crash:+"
     compile "com.google.firebase:firebase-config:+"
     compile "com.google.firebase:firebase-perf:+"
+    compile "com.firebaseui:firebase-ui-auth:3.2.2"
+
+    // Required only if Facebook login support is required
+    compile('com.facebook.android:facebook-android-sdk:4.27.0')
+
     // SUB-PROJECT DEPENDENCIES END
 }
 
